[package]
name = "aztail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_svc_applicationinsights = { git = "https://github.com/Azure/azure-sdk-for-rust" }
# azure_core = { path = "../../external/azure-sdk-for-rust/sdk/core" }
# azure_identity = { path = "../../external/azure-sdk-for-rust/sdk/identity" }
# azure_svc_applicationinsights = { path = "../../external/azure-sdk-for-rust/services/svc/applicationinsights" }
chrono = "0.4"
chrono-english = "0.1"
clap = "3.0.0-beta.5"
colored = "2.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros"] }

[dev-dependencies]
spectral = "0.6"
