[package]
name = "aztail"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "21e23649" }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "21e23649" }
azure_svc_applicationinsights = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "21e23649" }
azure_svc_operationalinsights = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "21e23649" }
chrono = "0.4"
chrono-english = "0.1"
clap = { version = "3.0", features = [ "derive" ] }
colored = "2.0"
futures = "0.3"
itertools = "0.10"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros"] }

[dev-dependencies]
speculoos = "0.7"
